# VectorFlow-GX

./: .gitignore  .gitmodules  README.md  meson.build
contrib/compiler_explorer/: nvcc-cuda.default.properties  properties_tag_options
docs/: SETUP.md  sources.md  supported-devices.md  tcp-problem-eba.md
include/: fastflow.h
include/common/: util.h
include/vectorflow/: init.h
include/vkf/: vkf.h
scripts/: nic-matching.sh  rebuild-quick.sh
src/: ff_eth.c  ff_gpu.c  init_eth.c  init_gpu.c  main.c  vkf.c  vkf_discover.c  vkf_gpu.c  vkf_ib.c  vkf_rdma.c
